--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@rollup/plugin-yaml": "^4.1.2",
     "@videojs-player/vue": "^1.0.0",
     "nuxt": "^3.14.1592",
-    "video.js": "^8.21.0",
     "vue": "latest",
     "vue-router": "latest",
     "vuetify": "^3.7.5",
     "vuetify-nuxt-module": "^0.18.3"
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.1"
   }
 }
