--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vuetify-nuxt-module": "^0.18.3"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^6.7.1"
+    "@fortawesome/fontawesome-free": "^6.7.1",
+    "nuxt-lodash": "^2.5.3"
   }
 }
