--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@rollup/plugin-yaml": "^4.1.2",
     "@videojs-player/vue": "^1.0.0",
+    "@vueuse/core": "^12.0.0",
     "nuxt": "^3.14.1592",
     "vue": "latest",
     "vue-router": "latest",
