--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/device": "^3.2.4",
     "@rollup/plugin-yaml": "^4.1.2",
     "@videojs-player/vue": "^1.0.0",
     "@vueuse/core": "^12.0.0",
